samples/errors/bad-indent.stkn
 func m(x, y, z)
     write(x + y)
   write(y + z)

  ifnot false
    return

func nothing()
        return
